RESOLVED FIXED232682
Fix for AXObjectCache::postPlatformNotification in isolated tree mode, debug builds.
https://bugs.webkit.org/show_bug.cgi?id=232682
Summary Fix for AXObjectCache::postPlatformNotification in isolated tree mode, debug ...
Andres Gonzalez
Reported 2021-11-03 14:21:18 PDT
Fix for layout tests in isolated tree mode, debug builds.
Attachments
Patch (2.75 KB, patch)
2021-11-03 14:39 PDT, Andres Gonzalez
no flags
Patch (5.63 KB, patch)
2021-11-03 18:17 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2021-11-03 14:21:31 PDT
Andres Gonzalez
Comment 2 2021-11-03 14:39:19 PDT
Andres Gonzalez
Comment 3 2021-11-03 18:17:33 PDT
EWS
Comment 4 2021-11-04 05:17:48 PDT
Committed r285258 (243869@main): <https://commits.webkit.org/243869@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443263 [details].
Note You need to log in before you can comment on or make changes to this bug.