Fix for AXObjectCache::postPlatformNotification in isolated tree mode, debug builds. https://bugs.webkit.org/show_bug.cgi?id=232682 <rdar://problem/84991736>

Reviewed by Chris Fleizach.

In debug builds AXObjectCache::postPlatformNotification was calling the
object's wrapper accessibilityIsIgnored, which in turn calls
updateBackingStore. Since postPlatformNotification runs on the main
thread, and calls into the platform's wrapper should happen on the
secondary thread, this is hitting the asserts in
AXIsolatedTree::applyPendingChanges to prevent this situation.
Instead of calling through the wrapper, this patch adds a utility
function to exercise the same core methods invoked by
accessibilityIsIgnored on the AX object directly, and hence avoiding the
problem above.

* accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::postPlatformNotification):



Canonical link: https://commits.webkit.org/243869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285258 268f45cc-cd09-0410-ab3c-d52691b4dbfc